@@ -11,6 +11,7 @@ Without you, I would've stopped working on Python long ago!
 PS: In the standard Python distribution, this file is encoded in UTF-8
 and the list is in rough alphabetical order by last names.
 
+Matt Mulsow
 Rajiv Abraham
 David Abrahams
 Ron Adam
